# Props

./: .gitignore  PrivacyHook.kt  README.md  architecture_review.md  build_zygisk.sh  custom_props.txt  download_modern_props.py  download_real_props.py  expand_props.py  fu.dex  module.prop  post-fs-data.sh  privacy_cleaner.sh  props_list.txt  service.sh  settings.gradle.kts  update_props.sh
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/privacy/mockapi/: HookEntry.kt  MainActivity.kt
app/src/main/java/com/privacy/mockapi/hooks/: BuildHook.kt  NativeHook.kt  SettingsHook.kt  TelephonyHook.kt
app/src/main/java/com/privacy/mockapi/utils/: MockDataGenerator.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  styles.xml
common/: profiles.list
jni/: Android.mk  module.cpp
zygisk/: CMakeLists.txt  module.cpp  zygisk.hpp
